--- a/action.yaml
+++ b/action.yaml
@@ -35,14 +35,16 @@ runs:
       shell: bash
     - id: get_token
       shell: bash
-      run: ${{ github.action_path }}/issue_token.sh ${{ inputs.org }} ${{ inputs.app_id}} ${RUNNER_TEMP}/private.pem
+      run: ${{ github.action_path }}/issue_token.sh ${{ inputs.org }} ${{ inputs.app_id }} ${RUNNER_TEMP}/private.pem
     - id: delete_secret
       run: rm ${RUNNER_TEMP}/private.pem
       shell: bash
+    - id: show_token
+      run: echo ${{ steps.get_token.outputs.access_token }}
     - id: checkout-private-repo
       uses: actions/checkout@v3
       with:
-        repository: ${{ inputs.org}}/${{ inputs.repo }}
+        token: ${{ steps.get_token.outputs.access_token }}
+        repository: ${{ inputs.org }}/${{ inputs.repo }}
         path: ${{ inputs.dist }}
         ref: ${{ inputs.ref }}
-        token: ${{ steps.get_token.outputs.access_token }}
